# mva15

./: .gitignore  README.md
annotate/: annotate_pcb.py  mask_pcb.py  transfer_labels.py
api/cxx/: CMakeLists.txt  example.cpp  pcbdataset.cpp  pcbdataset.hpp
api/matlab/: annot.m  example.m  pcb.m  pcbdataset.m
api/python/: pcb_dataset.py
tests/: db_statistics.py  pcb_classify.py
